--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  display: flex;
+  text-align: left;
 }
 
 .App-logo {
@@ -66,4 +67,10 @@
   margin: 10px;
   padding: 20px;
   width: 300px;
+}
+
+/* Add some basic styling for the main content area */
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
 }
