--- a/src/components/Header/SearchBar/SearchBar.module.css
+++ b/src/components/Header/SearchBar/SearchBar.module.css
@@ -1,17 +1,21 @@
-.search_bar{
+.search-bar{
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
+    align-items: center;
 }
-.search_bar input{
-    height: 44px;
+.search-bar input{
+    height: 50px;
     border-radius: 0;
     border-right: none;
-    font-size: 16px;
+    font-size: 21px;
+    padding-left: 15px;
+    max-width: 250px;
 }
 
-.search_bar button{
+.search-bar button{
+    min-width: 80px;
     color: white;
     justify-content: center;
     align-items: center;
