--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,28 +1,204 @@
-.sidebar {
-  width: 400px;
-  height: 100vh;
-  background-color: #f4f4f4;
-  padding: 20px;
-  border-right: 1px solid #ddd;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-.sidebar nav ul {
-  list-style: none;
-  padding: 0;
+*{
+  font-family: "Inter", "Montserrat", sans-serif;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.sidebar nav ul li {
-  margin-bottom: 15px;
+:root{
+  --body-color: #E4E9F7;
+  --sidebar-color: #FFF;
+  --primary-color: #695CFE;
+  --primary-color-light: #F6F5FF;
+  --toggle-color: #DDD;
+  --text-color: #707070;
+
+  --tran-02: all 0.2s ease;
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.4s ease;
+  --tran-05: all 0.5s ease;
+
 }
 
-.sidebar nav ul li a {
-  text-decoration: none;
-  color: #333;
-  font-size: 1.1rem;
+/* ===== SideBar ===== */
+.sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 250px;
+  padding: 10px 15px;
+  background-color: var(--sidebar-color);
+}
+
+/* ===== Reusable CSS ===== */
+.sidebar .text {
+  font-size: 16px;
   font-weight: 500;
+  color: var(--text-color)
 }
 
-.sidebar nav ul li a:hover {
-  color: #007bff;
-} 
+.sidebar .image-text {
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar .image-text img{
+  width: 80px;
+
+}
+
+.sidebar header{
+  position: relative;
+}
+
+.sidebar li{
+  height: 50px;
+  margin-top: 10px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar li .icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 60px;
+  font-size: 20px;
+}
+
+.sidebar li .icon, 
+.sidebar li .text {
+  color: var(--text-color);
+  transition: var(--tran-02);
+}
+
+.sidebar .header .image-text{
+  display: flex;
+  align-items: center;
+
+}
+
+.sidebar header .image-text .header-text{
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar .header-text .name{
+  font-weight: 600;
+}
+
+.sidebar .header-text .profession {
+  margin-top: -2px;
+}
+
+.sidebar header .toggle{
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  transform: translateY(-50%);
+  height: 25px;
+  width: 25px;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: var(--sidebar-color);
+  font-size: 22px;
+}
+.sidebar .search-box{
+  background-color: var(--primary-color-light);
+}
+
+.sidebar .search-box input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  background-color: var(--primary-color-light);
+}
+.sidebar li a{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 6px;
+  transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+  background: var(--primary-color);
+}
+
+.sidebar li a:hover .icon, 
+.sidebar li a:hover .text{
+  color: var(--sidebar-color)
+}
+
+.sidebar .menu-bar{
+  height: calc(100% - 100px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.sidebar .menu-bar .mode{
+  background: var(--primary-color-light);
+}
+
+.sidebar .menu-bar .mode .moon-sun {
+  height: 50px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar .menu-bar .mode i{
+  position: absolute;
+}
+
+.sidebar .menu-bar .mode i .sun{
+  opacity: 0;
+}
+
+.sidebar .menu-bar .mode .toggle-switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-width: 60px;
+  cursor: pointer;
+}
+
+.sidebar .toggle-switch .switch{
+  position: relative;
+  height: 22px;
+  width: 44px;
+  background: var(--toggle-color);
+  border-radius: 25px;
+}
+
+.sidebar .switch::before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  background: var(--sidebar-color);
+}
+
+
+
+
+
