Add BlockLineGuide component and styles, implement Product component with discount logic, and create ProductContainer for product display
- Introduced BlockLineGuide component for displaying content with a styled line guide.
- Created BlockLineGuide.module.css for styling the BlockLineGuide component.
- Developed Product component to handle product display with price and discount calculations.
- Added Product.module.css for styling the Product component.
- Implemented ProductContainer to manage and display multiple Product components.
- Styled ProductContainer with a grid layout in ProductContainer.module.css.
- Added a sample product image for demonstration.

--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -17,11 +17,11 @@
 
 .navigation ul li{
     width: 150px;
-    background-color: white;
+    background-color: var(--second-color);
 }
 
 .navigation ul li:hover {
-    background-color: black;
+    background-color: var(--first-color);
 }
 
 .navigation a{
