--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,31 @@
 /* Add some basic styling for the main content area */
 .main-content {
   flex-grow: 1;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-container {
+  z-index: 1000;
+  display: none;
 }
 
 .image-slider{
   margin-top: 50px;
+}
+
+.block-line-guide {
+  position: relative;
+  width: 100%;
+  height: 60px;
+}
+
+.product-container{
+  width: 100%;
+  height: 1600px;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  padding: 0 100px;
+  background-color: red;
 }
