--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,18 @@
+:root {
+    --first-color: #264653;
+    --second-color: #2a9d8f;
+    --third-color: #e9c46a;
+    --fourth-color: #f4a261;
+    --fifth-color: #e76f51;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100px;
-    background-color: #ffffff;
+    background-color: var(--second-color);
     color: white;
 }
 
@@ -14,9 +22,11 @@
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    margin-left: 60px;
 }
 
 .navigation {
+    margin-left: 300px;
     flex-grow: 1;
     height: 100%;
     display: flex;
@@ -25,8 +35,15 @@
 }
 
 .search_bar{
+    margin-left: 200px;
     height: 50px;
     width: 300px;
+    max-width: 620px;
+    transition: width 0.3s;
+}
+
+.search-bar.expanded {
+    width: 400px;
 }
 
 .auth_buttons{
