--- a/src/components/SlideTrack/ImageSlider.module.css
+++ b/src/components/SlideTrack/ImageSlider.module.css
@@ -1,4 +1,5 @@
 .slider-container {
+  display: flex;
   position: relative;
   margin: 0 auto;
   overflow: hidden;
@@ -11,6 +12,7 @@
   width: 100%;
   height: 100%;
   transition: all 0.3s ease-in-out;
+  overflow: hidden;
 }
 
 .slides-track {
@@ -21,16 +23,18 @@
 
 .slider-wrapper:hover .prev-button{
   transform: translateX(0);
+  opacity: 1;
 }
 
 .slider-wrapper:hover .next-button{
   transform: translateX(0);
+  opacity: 1;
 }
 
 .slide-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   display: block;
   transition: transform 0.3s ease-in-out;
 }
@@ -39,7 +43,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.35);
   color: white;
   border: none;
   padding: 12px 16px;
@@ -54,6 +58,7 @@
   transition: all 0.3s ease;
   z-index: 50;
   cursor: pointer;
+  opacity: 0;
 }
 
 .slider-button:hover {
@@ -136,3 +141,21 @@
     height: 10px;
   }
 } 
+
+.column-ads {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.column-ads a{
+  display: block;
+  width: 100%;
+  height: 125px;
+}
+
+.column-ads a img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
